--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   </head>
   <body>
     <div id="header" class="container">
-      header
+      <h1><a href="">はじめてのWordPress</a></h1>
+      <ul class="menu">
+        <li><a href="">menu</a></li>
+        <li><a href="">menu</a></li>
+        <li><a href="">menu</a></li>
+      </ul>
     </div><!-- /header -->
     <div id="main" class="container">
       <div id="posts">
@@ -18,7 +23,7 @@
       <div id="sidebar">
         sidebar
       </div><!-- /sidebar -->
-    </div>
+    </div><!-- /main -->
     <div id="footer" class="container">
       footer
     </div><!-- /footer -->
