Navigation footer commit

--- a/index.html
+++ b/index.html
@@ -36,14 +36,18 @@
             </div>
           </div>
         </div><!-- /post -->
+        <div class="navigation">
+          <div class="prev">prev</div>
+          <div class="next">next</div>
+        </div>
       </div><!-- /posts -->
       <div id="sidebar">
         <div class="widget">
           <h3>カテゴリー</h3>
           <ul>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href=""></a>item</li>
+            <li><a href="">item</a></li>
+            <li><a href=""></a>item</li>
           </ul>
         </div>
       </div><!-- /sidebar -->
